<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ddsm115_ros2_driver</name>
  <version>1.0.0</version>
  <description>The advanced, robust ROS 2 driver package for Waveshare DDSM115 direct-drive servo motors with ros2_control integration.</description>
  <maintainer email="yano@example.com">Tatsukiyano</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_components</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>rosidl_default_runtime</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
